--- a/page/business/style.css
+++ b/page/business/style.css
@@ -73,7 +73,6 @@
     color: #61109a
   }
 
-  /* Animation */
   .sidepanel.animate {
     width: 300px;
   }
@@ -145,10 +144,15 @@
     background-color: white;
     border-radius: 0.5rem;
     box-shadow: rgba(0, 0, 0, 0.5) 0px 3px 5px;
+    width: 5rem;
   }
 
   .info h1 {
     font-size: 25px;
+  }
+
+  .info p {
+    margin-top: -1rem;
   }
 
   .combined-total {
@@ -178,8 +182,6 @@
     font-weight: bold;
   }
 
-
-
   .combined-total p {
     margin-bottom: -1.8rem;
     color: white;
@@ -197,4 +199,35 @@
     text-decoration: underline;
   }
 
-  
+  .tiktok h1{
+    color: #E4A6FA;
+  }
+
+  .youtube h1{
+    color: #FAA6B5;
+  }
+
+  .twitter h1{
+    color: #A6E1FA;
+  }
+
+  .instagram h1{
+    color: #FACEA6;
+  }
+
+  .discord h1{
+    color: #A6B3FA;
+  }
+
+  .twitch h1{
+    color: #A6FABE;
+  }
+
+  @media (min-width: 1024px){
+    .info{
+      max-width: 660px;
+    }
+    .combined-total, .email {
+      max-width: 625px;
+    }
+  }
